--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Tab</title>
-    <link rel="shortcut icon" src="Google/images/real icon.ico">
-    <link rel="stylesheet" href="Google/styles.css">
+    <link rel="shortcut icon" src="images/real icon.ico">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <a href="#" class="buttons">Gmail</a>
-            <a href="#" class="buttons">Google/Images</a>
-            <a href="#" class="buttons"><img src="Google/images/apps.jpg" width="25px"></a>
+            <a href="#" class="buttons">Images</a>
+            <a href="#" class="buttons"><img src="images/apps.jpg" width="25px"></a>
         </nav>
     </header>
     <main>
         <section>
             <div id="logo">
-                <img src="/Google/images/google logo.png" alt="google" width="272">
+                <img src="images/google logo.png" alt="google" width="272">
             </div>
             <div id="search-bar">
-                <img src="/Google/images/magnifying-glass.png" alt="magnifying-glass" class="search-bar-icon1">
+                <img src="images/magnifying-glass.png" alt="magnifying-glass" class="search-bar-icon1">
                 <input type="text" placeholder="Search Google or type a URL">
-                <img src="/Google/images/mic.png" alt="mic" class="search-bar-icons2">
-                <img src="/Google/images/camera.png" alt="camera" class="search-bar-icons2">
+                <img src="images/mic.png" alt="mic" class="search-bar-icons2">
+                <img src="images/camera.png" alt="camera" class="search-bar-icons2">
             </div>
         </section>
     </main>
     <footer>
         <nav id="customize">
-            <img src="/Google/images/pen.png" alt="pen" id="customize-icon">
+            <img src="images/pen.png" alt="pen" id="customize-icon">
             <a href="#" >Customize Chrome</a>
         </nav>
     </footer>
